@@ -14,6 +14,8 @@
 + *tetragono*: Simple update will check to avoid merge physical edges into a single edge with very large dimension. It
   will only merge edges if the result edge has the dimension less equal to the =threshold=, which is =6= by default.
 + *tetragono*: Use better method to estimate the variance of measurement results observed by the sampling method.
++ *tetragono*: Tetragono shell will not refresh the corresponding configuration when creating or loading ap or gm state.
+  Since sometimes user may want to share the configuration between states.
 + *TAT.py*: Use mt19937(64 bit) as the random generator instead of c++ default random generator which may be different
   on different platforms.
 *** Deprecated
